Selection API: Add a UseCounter for focus change by selection change.

BUG=690272

Review-Url: https://codereview.chromium.org/2718293002
Cr-Commit-Position: refs/heads/master@{#453548}

Former-commit-id: beb1e82fe0893056ca1ffb9c729dc8f52cf2f30b